fix: :bug: Item controls no longer flicker when hovering over cards

--- a/theme/base.css
+++ b/theme/base.css
@@ -226,6 +226,7 @@ html {
     border-radius: var(--theme-roundness) !important;
     background: unset;
     box-shadow: inset 0 2px var(--theme-menu-shadow-colour) !important;
+    transition: unset;
 }
 
 .layout-mobile .cardOverlayButton {
